# seppl

./: .gitignore  CITATION.cff  Dockerfile  README.md  install_prover.sh  pyproject.toml  requirements.txt
scripts/: collect_user_metrics.py  create_users.py  initialize_projects.py  initialize_projects_debatershandbook19.py  initialize_projects_procon-org.py  manage_firestore.py
seppl/: firestore_playground.py  labelstudio_app.py  streamlit_app.py  streamlit_app2.py  utils.py
seppl/backend/: __init__.py  da2metric.py  gui.py  handler.py  inference.py  inputoption.py  project.py  project_store.py  session_state_keys.py  state_of_analysis.py  userinput.py
seppl/backend/gui/: __init__,py  __init__.py  gui.py  metrics_renderer.py  option_renderer.py  sofa_renderer.py
seppl/backend/handler/: __init__.py  argdown_handler.py  cue_handler.py  formalization_handler.py  handler.py  phase_one_handler.py  phase_three_handler.py  phase_two_handler.py  phase_zero_handler.py  quote_handler.py
tests/: test_annotations.py  test_da2metric.py  test_inference.py
