[tool.poetry]
name = "seppl"
version = "0.1.0"
description = "AI-Powered E-Learning App for Argument Analysis"
authors = ["Gregor Betz <gregor.betz@kit.edu>"]
license = "APACHE 2.0"

[tool.poetry.dependencies]
python = "^3.8"
streamlit = "^1.7.0"
google-cloud-firestore = "^2.3.4"
deepa2 = "^0.1.5"
streamlit-server-state = "^0.12.2"
transformers = "^4.20.1"
sentencepiece = "^0.1.96"
accelerate = "^0.10.0"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
mypy = "^0.931"
pylint = "^2.12.2"
flake8 = "^4.0.1"
watchdog = "^2.1.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
