[tool.poetry]
name = "seppl"
version = "0.1.0"
description = "AI-Powered E-Learning App for Argument Analysis"
authors = ["Gregor Betz <gregor.betz@kit.edu>"]
license = "APACHE 2.0"

[tool.poetry.dependencies]
python = "^3.8,<3.11"
streamlit = "^1.7.0"
google-cloud-firestore = "^2.3.4"
deepa2 = {path = "../deepa2/dist/deepa2-0.1.13rc0-py3-none-any.whl"}
nltk = "^3.7"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
mypy = "^0.931"
pylint = "^2.12.2"
flake8 = "^4.0.1"
watchdog = "^2.1.6"
pytest = "^7.1.3"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.16.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
